--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.show-sql=true
 
 #CodeFirst, DbFirst
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.root= ERROR
+logging.level.org.springframework.web= ERROR
+logging.level.org.hibernate= ERROR
