--- a/src/main/resources/projects.json
+++ b/src/main/resources/projects.json
@@ -1,32 +1,32 @@
 [
   {
     "_class": "com.smdyksl.issuemanagement.entity.Project",
-    "projectCode" : "IM",
-    "projectName": "Issue Management Project"
+    "projectCode" : "IM 5",
+    "projectName": "Issue Management Project 5"
   },
   {
     "_class": "com.smdyksl.issuemanagement.entity.Project",
-    "projectCode" : "ERP-S",
-    "projectName": "ERP Project for Sales"
+    "projectCode" : "ERP-S 5",
+    "projectName": "ERP Project for Sales 5"
   },
   {
     "_class": "com.smdyksl.issuemanagement.entity.Project",
-    "projectCode" : "CRM-S",
-    "projectName": "CRM Project for Sales"
+    "projectCode" : "CRM-S 5",
+    "projectName": "CRM Project for Sales 5"
   },
   {
     "_class": "com.smdyksl.issuemanagement.entity.Project",
-    "projectCode" : "CRM-B",
-    "projectName": "CRM Project for Bussiness"
+    "projectCode" : "CRM-B 5",
+    "projectName": "CRM Project for Bussiness 5"
   },
   {
     "_class": "com.smdyksl.issuemanagement.entity.Project",
-    "projectCode" : "ERP-B",
-    "projectName": "ERP Project for Bussiness"
+    "projectCode" : "ERP-B 5",
+    "projectName": "ERP Project for Bussiness 5"
   },
   {
     "_class": "com.smdyksl.issuemanagement.entity.Project",
-    "projectCode" : "TP",
-    "projectName": "Test Project"
+    "projectCode" : "TP 5",
+    "projectName": "Test Project 5"
   }
 ]
